tests/neg/infer-fun-res.stk
fun foo(x: Int) = x + x

fun a: Bool = foo 5 // error

fun fact(x: Int) =
  if 0 == x then 1
  else fact (x - 1) * x

fun b: Bool = fact 10 // error

fun f(x: Int) =       // error
  val a = g x
  val b = a.field     // error
  a

fun g(x: Int) =
  val a = f x
  val b = a.field    // error
  a

fun h(x: Int): Int =
  val a = f x
  a.field            // error

fun f0(x: Int) = g0 x   // error
fun g0(x: Int) = f0 x

fun m(x: Int) =
  if 0 == x then { a = 1 }        // error
  else { a = m (x - 1) , b = x }

fun test1(x: Int): { a: Int } =
  m 10
